@@ -1,4 +1,5 @@
 0.4.0:
+* winforth32 config.fs/make.fs added
 * config: new word <=> for comparing numbers (2006-12-12)
 * chs: new words chs-set-string,chs-reset-string (2006-12-11)
 * Comment cleanup (2006-12-10)
